GH-5711 improve data import speed (also GH-5748) (#5721)
Fixes GH-5711  and fixes GH-5748